getKicks API overhaul (late, but meh), fix the overflow issue, fix install.php bug in last commit, work on phrases+templates.

--- a/client/css/stylesv2.css
+++ b/client/css/stylesv2.css
@@ -12,11 +12,11 @@
 }
 
 body {
-  margin-top: 3px;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 20px;
-  padding: 0px;
+  padding-top: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 20px;
+  margin: 0px;
   overflow-x: hidden;
   font-family: Ubuntu, Calibria, Arial;
 }
